# betting

bet/: app.py  pyproject.toml
bet/templates/: index.html  login.html  register.html
