[tool.poetry]
name = "betting-app"
version = "0.1.0"
description = "A Flask betting web application"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
flask = "^3.0.3"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
