[tool.poetry]
name = "betting-app"
version = "0.1.0"
description = "A Flask betting web application"
authors = ["Bishwash Rana"]
package-mode = false

[tool.poetry.dependencies]
python = "*"
flask = "^3.0.3"
gunicorn = "^23.0.0"
mysql-connecter-python = "^9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
